--- a/style.css
+++ b/style.css
@@ -23,10 +23,11 @@ section{
 
 h1{
   margin-left: 1rem;
+  font-size: 2rem;
 }
 
 h1, h2{
-  font-family: georgia;
+  font-family: georgia
 }
 
 h2{
@@ -62,12 +63,12 @@ button:hover, select:hover{
   background: rgba(210,110,0,0.2);
 }
 
-input[type=text]{
+input[type=text], input[type=number]{
   padding: 0.3rem;
   border-radius: 0.2rem;
   border: 1px solid gray;
 }
-input[type=text]:focus{
+input[type=text]:focus, input[type=number]:focus{
   outline: 1px solid orangered;
 }
 
@@ -104,7 +105,8 @@ input[type=text]:focus{
   height: 100%;
 }
 
-.book-card h3{
+h3{
+  width: 100%;
   text-align: center;
   font-size: 1.5rem;
   margin: 0.5rem;
@@ -126,8 +128,8 @@ input[type=text]:focus{
   font-family: courier;
 }
 
-.book-card i:hover{
-  cursor: pointer;
+.book-pointer:hover{
+  cursor: pointer !important;
   color: orangered;
 }
 
@@ -141,6 +143,10 @@ input[type=text]:focus{
   font-family: monospace;
   color: white;
   font-size: 2rem;
+}
+
+.hide-me{
+  display: none;
 }
 
 @media(max-width: 80rem){
@@ -175,8 +181,15 @@ input[type=text]:focus{
   button{
     margin-bottom: 0;
   }
+  
   form{
     flex-direction: column;
     text-align: center;
+  }
+
+  .form-group{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 }
